...
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@mipmap/ic_launcher" />

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/numberListView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="80dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" android:layout_marginStart="4dp"/>
        <TextView
                android:text="42"
                android:id="@+id/currentNumberShouldPickTextView"
                android:textColor="@android:color/white" android:textSize="36sp" android:textStyle="bold"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/find" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"/>
        <LinearLayout
                android:orientation="vertical"
...
